--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -269,10 +269,10 @@ $(document).ready(function () {
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
     </li>
-    <li>
-      <a href="quite_smoke.html">Quit Smoking!</a>
-    </li>
   </ul>
+</li>
+<li>
+  <a href="quite_smoke.html">Quit Smoking!</a>
 </li>
 <li>
   <a href="mailto:&lt;lh3109@cumc.columbia.edu&gt;">
@@ -320,6 +320,7 @@ $(document).ready(function () {
 </div>
 <div id="quit-smoking" class="section level1">
 <h1>Quit Smoking!</h1>
+<p><img src="photo.jpeg" style="width:55%"></p>
 </div>
 
 
