--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -315,8 +315,8 @@ $(document).ready(function () {
 <ol style="list-style-type: decimal">
 <li><p>Talk to a quit smoking counselor individually or in a group.</p></li>
 <li><p>Get <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitline/index.html">free confidential coaching</a>through a telephone quitline (1-800-QUIT-NOW).</p></li>
+<li><p>Use a mobile app like <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html">quitSTART</a>. More suggestion can be found in <a href="https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm">Centers for Disease Control and Prevention (CDC)</a></p></li>
 </ol>
-<p>3.Use a mobile app like <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html">quitSTART</a>. More suggestion can be found in <a href="https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm">Centers for Disease Control and Prevention (CDC)</a></p>
 </div>
 <div id="quit-smoking" class="section level1">
 <h1>Quit Smoking!</h1>
