--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Smoking in the U.S.</title>
+<title>DO YOU SMOKE?</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -379,11 +379,13 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Smoking in the U.S.</h1>
+<h1 class="title toc-ignore">DO YOU SMOKE?</h1>
 
 </div>
 
 
+<div id="smoking-in-the-u.s." class="section level2">
+<h2>Smoking in the U.S.</h2>
 <p>Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He</p>
 <p><img src="us.jpeg" style="width:55%"></p>
 <div id="motivation" class="section level3">
@@ -439,6 +441,7 @@ div.tocify {
 <div id="discussion" class="section level3">
 <h3>Discussion</h3>
 <p>When working on this project, we find out several limitations. First, as discussed in the Statistical Analysis section, we find it difficult to conduct a statistical significant model because of the complex variables. These survey data are potentially biased as we are unable to control how the respondents answer the questionnaire. Second, when tidying our datasets, we found out there is not a very strict rule to define a smoker. The only categorical we have is whether the respondent is a current every day smoker, current some day smoker, former smoker and never smoker. Third, we only focus on cigarettes due to limited data, while there are many forms of tobacco smoking, such as little cigarettes, cigar and other non-combustible smoking, such as chewing tobacco and e-cigarettes.</p>
+</div>
 </div>
 
 
