--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -258,7 +258,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="part-1-.html">Overall Smoking Trends by NHIS</a>
+      <a href="part_1.html">Overall Smoking Trends by NHIS</a>
     </li>
     <li>
       <a href="part1_brfss.html">Smoking Trends in Different States by BRFSS</a>
