--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <title>DO YOU SMOKE?</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
-<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -415,11 +415,10 @@ div.tocify {
 <div id="initial-questions" class="section level3">
 <h3>Initial Questions</h3>
 <ol style="list-style-type: decimal">
-<li>What is the overall smoking trend in the years between 2017 and 2020?What is the distribution of smoker among different age group, race and sex? 2.Which states has the highest and the lowest smoking proportion? Which states has the largest increase/ decrease in smoking proportion over the past 4 years?</li>
+<li>What is the overall smoking trend in the years between 2017 and 2020? What is the distribution of smoker among different age group, race and sex? 2.Which states has the highest and the lowest smoking proportion? Which states has the largest increase/ decrease in smoking proportion over the past 4 years?</li>
 <li>What is the distribution of smokers among subgroups defined by demographic characteristics, during the Covid-19 pandemic?</li>
 <li>Is there a decrease in current smoking rates among people with specific medical conditions during the Covid-19 pandemic compared to the previous year?</li>
 <li>What is the situation of quitting smoke in 2020?</li>
-<li></li>
 </ol>
 </div>
 <div id="exploratory-analysis" class="section level3">
