--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Let’s quit smoking!</title>
+<title>Let’s Quit Smoking!</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -258,13 +258,13 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="part_1.html">Overall Smoking Trends by NHIS</a>
+      <a href="part_1.html">Overall Smoking Trends</a>
     </li>
     <li>
-      <a href="part1_brfss.html">Smoking Trends in Different States by BRFSS</a>
+      <a href="part1_brfss.html">Smoking Trends in Different States</a>
     </li>
     <li>
-      <a href="smoking_and_covid19.html">Smoking during Covid-19 Pendamic</a>
+      <a href="smoking_and_covid19.html">Smoking During Covid-19 Pendamic</a>
     </li>
     <li>
       <a href="quit_smoke.html">Quit Smoking Analysis</a>
@@ -303,24 +303,25 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Let’s quit smoking!</h1>
+<h1 class="title toc-ignore">Let’s Quit Smoking!</h1>
 
 </div>
 
 
-<p><img src="photo.jpeg" style="width:55%"></p>
-<div id="here-are-some-suggestion-for-you-to-quite-smoking" class="section level1">
-<h1>Here are some suggestion for you to quite smoking!</h1>
+<center>
+<img src="photo.jpeg" style="width:50%">
+</center>
+<center>
+<img src="smoke.jpeg" style="width:50%">
+</center>
+<div id="here-are-some-suggestion-for-you-to-quite-smoking" class="section level3">
+<h3>Here are some suggestion for you to quite smoking!</h3>
 <p>YOU CAN:</p>
 <ol style="list-style-type: decimal">
 <li><p>Talk to a quit smoking counselor individually or in a group.</p></li>
 <li><p>Get <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitline/index.html">free confidential coaching</a>through a telephone quitline (1-800-QUIT-NOW).</p></li>
 <li><p>Use a mobile app like <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html">quitSTART</a>. More suggestion can be found in <a href="https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm">Centers for Disease Control and Prevention (CDC)</a></p></li>
 </ol>
-<div id="quit-smoking" class="section level2">
-<h2>Quit Smoking!</h2>
-<p><img src="smoke.jpeg" style="width:25%"></p>
-</div>
 </div>
 
 
