Fixed "QUITE" smoke lol

--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -314,8 +314,8 @@ $(document).ready(function () {
 <center>
 <img src="smoke.jpeg" style="width:50%">
 </center>
-<div id="here-are-some-suggestion-for-you-to-quite-smoking" class="section level3">
-<h3>Here are some suggestion for you to quite smoking!</h3>
+<div id="here-are-some-suggestion-for-you-to-quit-smoking" class="section level3">
+<h3>Here are some suggestion for you to quit smoking!</h3>
 <p>YOU CAN:</p>
 <ol style="list-style-type: decimal">
 <li><p>Talk to a quit smoking counselor individually or in a group.</p></li>
