--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -308,20 +308,19 @@ $(document).ready(function () {
 </div>
 
 
-<center>
-<img src="photo.jpeg" style="width:50%">
-</center>
-<center>
-<img src="smoke.jpeg" style="width:50%">
-</center>
 <div id="here-are-some-suggestion-for-you-to-quit-smoking" class="section level3">
 <h3>Here are some suggestion for you to quit smoking!</h3>
-<p>YOU CAN:</p>
 <ol style="list-style-type: decimal">
 <li><p>Talk to a quit smoking counselor individually or in a group.</p></li>
 <li><p>Get <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitline/index.html">free confidential coaching</a>through a telephone quitline (1-800-QUIT-NOW).</p></li>
 <li><p>Use a mobile app like <a href="https://www.cdc.gov/tobacco/campaign/tips/quit-smoking/quitstart-app/index.html">quitSTART</a>. More suggestion can be found in <a href="https://www.cdc.gov/tobacco/quit_smoking/how_to_quit/index.htm">Centers for Disease Control and Prevention (CDC)</a></p></li>
 </ol>
+<center>
+<img src="photo.jpeg" style="width:50%; float: left">
+</center>
+<center>
+<img src="smoke.jpeg" style="width:35%">
+</center>
 </div>
 
 
