--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ div.tocify {
 <ul>
 <li><a href="https://chronicdata.cdc.gov/Behavioral-Risk-Factors/BRFSS-Table-of-Tobacco-Use/bq95-jg9r">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
 </ul>
-<p>The dataset was downloaded from BRFSS. It contains the tobacco use information of participants from all age, race , sex and states.Since we are focusing years between 2017 to 2020, <code>filter</code> was applied to filtered out <code>year</code> equals to 2017-2020.There are 27 columns in the data, we only selected few columns useful to our analysis, which were <code>locationabbr</code> (State Name),<code>geo_location</code>(latitude and longitude for map), <code>sample_size</code> (sample size),<code>topic</code>(only question related to current smoking status is selected).Then we summed up the number of smokers in each state and calculated the smoking proportion with respect to their state.</p>
+<p>The dataset was downloaded from BRFSS. It contains the tobacco use information of participants from all age, race , sex and states.Since we are focusing years between 2017 to 2020, <code>filter</code> was applied to filtered out <code>year</code> equals to 2017-2020.There are 27 columns in the data, we only selected few columns useful to our analysis, which were <code>locationabbr</code> (State Name),<code>geo_location</code>(latitude and longitude for map), <code>sample_size</code> (sample size),<code>topic</code>(only question related to current smoking status is selected).Then we summed up the number of smokers in each state and calculated the smoking proportion with respect to their states.</p>
 <ul>
 <li><a href="https://chronicdata.cdc.gov/Legislation/CDC-STATE-System-Tobacco-Legislation-Tax/2dwv-vfam">CDC STATE System Tobacco Legislation - Tax</a></li>
 </ul>
@@ -421,9 +421,9 @@ div.tocify {
 <h3>Initial Questions</h3>
 <ol style="list-style-type: decimal">
 <li>What is the overall smoking trend in the years between 2017 and 2020? What is the distribution of smoker among different age group, race and sex? 2.Which states has the highest and the lowest smoking proportion? Which states has the largest increase/ decrease in smoking proportion over the past 4 years?</li>
-<li>What is the distribution of smokers among subgroups defined by demographic characteristics, during the Covid-19 pandemic?</li>
+<li>What is the distribution of smokers among minority groups compared to majority groups, during the Covid-19 pandemic?</li>
 <li>Is there a decrease in current smoking rates among people with specific medical conditions during the Covid-19 pandemic compared to the previous year?</li>
-<li>What is the situation of quitting smoke in 2020?</li>
+<li>What is the situation of quitting smoking in 2020?</li>
 </ol>
 </div>
 <div id="exploratory-analysis" class="section level3">
