--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@ div.tocify {
   <a href="quite_smoke.html">Quit Smoking!</a>
 </li>
 <li>
+  <a href="final_report.html">Final Report</a>
+</li>
+<li>
   <a href="mailto:&lt;lh3109@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
