--- a/quite_smoke.html
+++ b/quite_smoke.html
@@ -275,6 +275,9 @@ $(document).ready(function () {
   <a href="quite_smoke.html">Quit Smoking!</a>
 </li>
 <li>
+  <a href="final_report.html">Final Report</a>
+</li>
+<li>
   <a href="mailto:&lt;lh3109@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
